hello-world.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: hello-world-deployment
  namespace: kube-system
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: hello-world
    spec: 
      containers: 
        - image: "gokul93/hello-world:latest"
          imagePullPolicy: Always
          name: hello-world-container
          ports: 
            - containerPort: 8080
