svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: hello-world-svc
spec: 
  ports: 
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: hello-world
  type: NodePort
